src/test/deca/context/valid/class/autoreference/inheritedclass.deca
// Description:
//    Affectation de this à un objet de la superclass
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class B {

}

class A extends B {
	void m() {
		B a = this;
	}
}

{

}

